--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -1,8 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable name="profileVm" type="com.simx.kittycat.ui.profile.ProfileVM"/>
+    </data>
+    <RelativeLayout
+        android:padding="@dimen/margin_10"
+        android:layout_margin="@dimen/margin_10"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/cv"
+            android:layout_margin="@dimen/margin_10"
+            app:cardCornerRadius="@dimen/margin_5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </com.google.android.material.card.MaterialCardView>
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_logout"
+            android:text="@string/logout"
+            android:layout_below="@id/cv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </RelativeLayout>
+</layout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
