--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -6,8 +6,8 @@
     </data>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_margin="@dimen/margin_10"
-        android:padding="@dimen/margin_5"
+        android:id="@+id/rcv_cat_types"
+        android:layout_marginBottom="?attr/actionBarSize"
         tools:listitem="@layout/item_cat_type"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
