--- a/app/src/main/res/layout/item_cat.xml
+++ b/app/src/main/res/layout/item_cat.xml
@@ -19,9 +19,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
             <TextView
-
+                android:gravity="center"
                 android:layout_centerHorizontal="true"
                 android:textSize="16sp"
+                android:textColor="@android:color/black"
                 android:layout_margin="@dimen/margin_10"
                 android:text="@{itemCatVm.name}"
                 android:padding="@dimen/margin_5"
