--- a/app/src/main/res/layout/item_cat_type.xml
+++ b/app/src/main/res/layout/item_cat_type.xml
@@ -3,11 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:bind="http://schemas.android.com/tools">
     <data>
-        <variable name="itemCatTypeVm" type="com.simx.kittycat.ui.home.ItemCatsTrpeVM"/>
+        <variable name="itemCatTypeVm" type="com.simx.kittycat.ui.home.ItemCatsTypeVM"/>
     </data>
     <com.google.android.material.card.MaterialCardView
         app:cardCornerRadius="@dimen/margin_5"
-        android:padding="@dimen/margin_5"
         android:layout_margin="@dimen/margin_5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -20,14 +19,21 @@
                 android:scaleType="centerCrop"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
-            <TextView
-                android:textSize="16sp"
+            <LinearLayout
                 android:layout_alignParentBottom="true"
-                android:layout_margin="@dimen/margin_5"
-                android:text="@{itemCatTypeVm.name}"
-                android:padding="@dimen/margin_5"
+                android:background="@drawable/bg_gradient"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content">
+                <TextView
+                    android:textSize="16sp"
+                    android:textColor="@android:color/white"
+                    android:layout_margin="@dimen/margin_5"
+                    android:text="@{itemCatTypeVm.name}"
+                    android:padding="@dimen/margin_5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
         </RelativeLayout>
     </com.google.android.material.card.MaterialCardView>
 </layout>
