--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -16,7 +16,39 @@
             app:cardCornerRadius="@dimen/margin_5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
+            <RelativeLayout
+                android:padding="@dimen/margin_5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:id="@+id/img_profile"
+                    android:padding="@dimen/margin_10"
+                    android:scaleType="centerCrop"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"/>
+                <LinearLayout
+                    android:layout_centerInParent="true"
+                    android:layout_toEndOf="@id/img_profile"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:text="Bambang Heri Setiawan"
+                        android:padding="@dimen/margin_5"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:text="Male"
+                        android:padding="@dimen/margin_5"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:text="+6282138250025"
+                        android:padding="@dimen/margin_5"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+            </RelativeLayout>
         </com.google.android.material.card.MaterialCardView>
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_logout"
